# NS2dLab_Python

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: NS2dLab_backend_spec.md  algorithms.md  api.md  backend_results.md  cli.md  contributing.md  figure_style.md  flame_hit_workflow.md  flame_workflow_results.md  getting-started.md  gpu.md  index.md  project-layout.md  validation.md  validation_results.md
docs/explanation/: flame-hit-methodology.md  gpu-backend.md  solver-algorithms.md  validation-philosophy.md
docs/how-to/: benchmark-performance.md  install-gpu-support.md  regenerate-docs-artifacts.md  target-a-regime-diagram-location.md  use-the-flame-hit-workflow.md
docs/reference/: api-reference.md  backend-specification.md  cli-reference.md  output-formats.md  project-layout.md
docs/results/: backend-results.md  figure-style.md  flame-hit-results.md  validation-results.md
docs/start-here/: installation.md  overview.md
docs/tutorials/: compare-cpu-and-gpu.md  flame-hit-workflow.md  run-your-first-simulation.md
scripts/: generate_docs_artifacts.py  render_2d_turbulence_validation.py  render_default_ns2dlab_curl.py  render_tg_vortex_validation.py
src/nslab2d/: __init__.py  backend.py  cli.py  compare.py  config.py  diagnostics.py  field_io.py  flame_properties.py  hit_stats.py  io.py  openfoam.py  operators.py  plot_style.py  projection.py  regime_diagram.py  solver.py  turbulence_design.py  types.py
tests/: test_backend.py  test_field_io.py  test_fields.py  test_flame_properties.py  test_gpu.py  test_hit_stats.py  test_io.py  test_openfoam.py  test_regime.py  test_solver.py  test_turbulence_design.py  test_validation.py
